--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
      commodities and thinking about the future of finance & tech. I
     <a target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a> and
     <a class='mainlink' href="design.html">design</a>.
-    Co-founder of
-    <a target="_blank" class='mainlink' href="http://thelocustexperiment.com">The Locust Experiment</a> and PM w/
-    <a target="_blank" class='mainlink' href="http://thecollctve.com">The Collctve</a>. Coming soon: product development work with
-    <a target="_blank" class='mainlink' href="http://www.shleepbetter.com/">Shleep</a> in Amsterdam for the spring of 2018. Hmm...what else?
+    I co-founded
+    <a target="_blank" class='mainlink' href="http://thelocustexperiment.com">The Locust Experiment</a> and helped build
+    <a target="_blank" class='mainlink' href="http://thecollctve.com">The Collctve</a>. Currently I'm doing product development work with
+    <a target="_blank" class='mainlink' href="http://www.shleepbetter.com/">Shleep</a> in Amsterdam.
     <a target="_blank" class='mainlink' href="cv.html">CV</a>,
     <a target="_blank" class='mainlink' href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
-    <a target="_blank" class='mainlink' href="https://medium.com/@rlietrom">writing</a>. </p>
+    <a target="_blank" class='mainlink' href="https://medium.com/@rlietrom">writing</a>. Wondering what's next? Me too!</p>
     <input type="text" value="ostrom@wharton.upenn.edu" id="myInput">
 
   <img class="dog img1" src="styles/assets/winston2.svg" alt="">
