--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class='title' >CARLIE OSTROM</div>
-  <p>Hi, I’m Carlie and today I’m thinking about my pupper,
+  <p>Hi, I’m Carlie and today I’m thinking about my puppy,
     <span class="realWinston">Winston
       <!-- <img class="realWinston1" src="styles/assets/realWinston.jpg" alt="img"> -->
     </span>
