--- a/design.html
+++ b/design.html
@@ -8,171 +8,174 @@
   </head>
   <body>
 <!-- https://codepen.io/lemmin/pen/xRyXMZ -->
-    <a class='title' href="index.html">CARLIE OSTROM</a>
-    <p>Design Work</p>
-    <div class="buttonrow">
-      <h3 class="buttoncol UIUX">
-        <button class="idk designbutton" type="button" name="button">UI/UX</button>
-      </h3>
-      <h3 class="buttoncol coursework">
-        <button class="idk2 designbutton" type="button" name="button">Coursework</button>
-      </h3>
-      <h3 class="buttoncol commwork">
-        <button class="idk3 designbutton" type="button" name="button">Commercial Work</button>
-      </h3>
-      <h3 class="bottoncol locust">
-        <button class="idk4 designbutton" type="button" name="button">The Locust Experiment</button>
-      </h3>
+<div class="designbox">
+  <a class='title' href="index.html">CARLIE OSTROM</a>
+  <p>Design Work</p>
+  <div class="buttonrow">
+    <h3 class="buttoncol UIUX">
+      <button class="idk designbutton" type="button" name="button">UI/UX</button>
+    </h3>
+    <h3 class="buttoncol coursework">
+      <button class="idk2 designbutton" type="button" name="button">Coursework</button>
+    </h3>
+    <h3 class="buttoncol commwork">
+      <button class="idk3 designbutton" type="button" name="button">Commercial Work</button>
+    </h3>
+    <h3 class="bottoncol locust">
+      <button class="idk4 designbutton" type="button" name="button">The Locust Experiment</button>
+    </h3>
+  </div>
+
+
+  <div class="UIUXcontainer">
+  <div id="container">
+      <div id="container2">
+        <div class="box small">
+          <div>
+            <img src="styles/assets/ElephantVid.gif" alt="">
+            <p>eLephant</p>
+            <h3>Reimagination of Lboard; find it on the App Store.</h3>
+          </div>
+        </div>
+        <div class="box small">
+          <div>
+            <img src="styles/assets/snackchatvid.gif" alt="">
+            <p>Snackchat</p>
+            <h3>Snackchat is an app that only lets use send
+              <br>
+              pictures of food to your friends. View code
+              <a class="h3link" href="https://github.com/rlietrom/Snackchat">here</a>.</h3>
+          </div>
+        </div>
+        <div class="box big">
+          <div>
+            <img src="styles/assets/merch-vis.gif" alt="">
+            <p>Merch Visualizer</p>
+            <h3>A tool for investors to find arbitrage opportunities
+              <br>
+              in the commodities and futures markets. View
+              <a href="http://merch-visualizer.herokuapp.com">here.</a>
+            </h3>
+          </div>
+        </div>
+        <div class="box medium">
+          <div>
+            <img src="styles/assets/EmailDesignVid-iloveimg-compressed.gif" alt="">
+            <p>Netflix Email Design</p>
+            <h3>Challenge: be Netflix as if entering the United Kingdom
+              for the first time.
+            </h3>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
-
-    <div class="UIUXcontainer">
+  <div class="locustcontainer">
     <div id="container">
         <div id="container2">
-          <div class="box small">
+          <div class="box smallmed">
             <div>
-              <img src="styles/assets/ElephantVid.gif" alt="">
-              <p>eLephant</p>
-              <h3>Reimagination of Lboard; find it on the App Store.</h3>
+              <img src="styles/assets/TLEbook.jpg" alt="">
+              <p>The Locust Experiment</p>
+              <h3>A design publication that showcases student artists,
+                <br>designers, photographers, and writers. See full edition
+              <a href="http://thelocustexperiment.com">here.</a></h3>
             </div>
           </div>
-          <div class="box small">
-            <div>
-              <img src="styles/assets/snackchatvid.gif" alt="">
-              <p>Snackchat</p>
-              <h3>Snackchat is an app that only lets use send
-                <br>
-                pictures of food to your friends. View code
-                <a class="h3link" href="https://github.com/rlietrom/Snackchat">here</a>.</h3>
+          <div class="box smallmed">
+            <div class="">
+              <img src="styles/assets/TLEdisplay2.jpeg" alt="">
             </div>
           </div>
-          <div class="box big">
-            <div>
-              <img src="styles/assets/merch-vis.gif" alt="">
-              <p>Merch Visualizer</p>
-              <h3>A tool for investors to find arbitrage opportunities
-                <br>
-                in the commodities and futures markets. View
-                <a href="http://merch-visualizer.herokuapp.com">here.</a>
-              </h3>
+          <div class="box smallmedmed">
+            <div class="">
+              <img src="styles/assets/TLEinside.jpg" alt="">
             </div>
           </div>
-          <div class="box medium">
-            <div>
-              <img src="styles/assets/EmailDesignVid-iloveimg-compressed.gif" alt="">
-              <p>Netflix Email Design</p>
-              <h3>Challenge: be Netflix as if entering the United Kingdom
-                for the first time.
-              </h3>
+          <div class="box smallmed">
+            <div class="">
+              <img src="styles/assets/TLEcards.jpg" alt="">
             </div>
           </div>
-        </div>
-      </div>
-    </div>
+          <div class="box medium2">
+            <div class="">
+              <img src="styles/assets/TLEus.jpeg" alt="">
+            </div>
+          </div>
 
-    <div class="locustcontainer">
-      <div id="container">
-          <div id="container2">
-            <div class="box smallmed">
-              <div>
-                <img src="styles/assets/TLEbook.jpg" alt="">
-                <p>The Locust Experiment</p>
-                <h3>A design publication that showcases student artists,
-                  <br>designers, photographers, and writers. See full edition
-                <a href="http://thelocustexperiment.com">here.</a></h3>
-              </div>
-            </div>
-            <div class="box smallmed">
-              <div class="">
-                <img src="styles/assets/TLEdisplay2.jpeg" alt="">
-              </div>
-            </div>
-            <div class="box smallmedmed">
-              <div class="">
-                <img src="styles/assets/TLEinside.jpg" alt="">
-              </div>
-            </div>
-            <div class="box smallmed">
-              <div class="">
-                <img src="styles/assets/TLEcards.jpg" alt="">
-              </div>
-            </div>
-            <div class="box medium2">
-              <div class="">
-                <img src="styles/assets/TLEus.jpeg" alt="">
-              </div>
-            </div>
-
-          </div>
-      </div>
-    </div>
-
-    <div class="courseworkcontainer">
-      <div id="container">
-          <div id="container2">
-            <div class="box smallmedium">
-              <div>
-                <img src="styles/assets/1.3Octavia.png" alt="">
-                <p>Octavia</p>
-                <h3>Based on Italo Calvino's novel Invisible Cities
-                  <br> and a chapter about a city of nets.</h3>
-              </div>
-          </div>
-          <div class="box smallmedium">
-            <div>
-              <img src="styles/assets/sam.png" alt="">
-              <p>Sam</p>
-              <h3>Uncle Sam seeing and ignoring a plea.</h3>
-            </div>
-          </div>
-          <div class="box smallmedium">
-            <div>
-              <img src="styles/assets/guccioriginal.png" alt="">
-              <p>Gucci Galapagos</p>
-              <h3>A Gucci ad digitized and stylized.</h3>
-            </div>
-          </div>
-          <div class="box smallmedium">
-            <div>
-              <img src="styles/assets/guccifast.png" alt="">
-            </div>
-          </div>
-          <div class="box smallmedium">
-            <div>
-              <img src="styles/assets/guccisketch.png" alt="">
-            </div>
-          </div>
-          <div class="box smallmedium">
-            <div>
-              <img src="styles/assets/gucci.png" alt="">
-            </div>
-          </div>
-          <div class="box smallmedi">
-            <div>
-              <img src="styles/assets/CarlieOstromWearable.png" alt="">
-              <p>Mask</p>
-              <h3>A physical data visualization of my <br>
-              sleep schedule during college. </h3>
-            </div>
-        </div>
         </div>
     </div>
   </div>
 
-      <div class="commworkcontainer">
-        <div id="container">
-            <div id="container2">
-              <div class="box smallmedium">
-                <div>
-                  <img src="styles/assets/1.3Octavia.png" alt="">
-                  <p>Coming Soon</p>
-                  <h3>I promise.</h3>
-                </div>
+  <div class="courseworkcontainer">
+    <div id="container">
+        <div id="container2">
+          <div class="box smallmedium">
+            <div>
+              <img src="styles/assets/1.3Octavia.png" alt="">
+              <p>Octavia</p>
+              <h3>Based on Italo Calvino's novel Invisible Cities
+                <br> and a chapter about a city of nets.</h3>
             </div>
-
+        </div>
+        <div class="box smallmedium">
+          <div>
+            <img src="styles/assets/sam.png" alt="">
+            <p>Sam</p>
+            <h3>Uncle Sam seeing and ignoring a plea.</h3>
+          </div>
+        </div>
+        <div class="box smallmedium">
+          <div>
+            <img src="styles/assets/guccioriginal.png" alt="">
+            <p>Gucci Galapagos</p>
+            <h3>A Gucci ad digitized and stylized.</h3>
+          </div>
+        </div>
+        <div class="box smallmedium">
+          <div>
+            <img src="styles/assets/guccifast.png" alt="">
+          </div>
+        </div>
+        <div class="box smallmedium">
+          <div>
+            <img src="styles/assets/guccisketch.png" alt="">
+          </div>
+        </div>
+        <div class="box smallmedium">
+          <div>
+            <img src="styles/assets/gucci.png" alt="">
+          </div>
+        </div>
+        <div class="box smallmedi">
+          <div>
+            <img src="styles/assets/CarlieOstromWearable.png" alt="">
+            <p>Mask</p>
+            <h3>A physical data visualization of my <br>
+            sleep schedule during college. </h3>
           </div>
       </div>
+      </div>
+  </div>
+</div>
+
+    <div class="commworkcontainer">
+      <div id="container">
+          <div id="container2">
+            <div class="box smallmedium">
+              <div>
+                <img src="styles/assets/realWinston.JPG" alt="">
+                <p>Coming Soon</p>
+                <h3>I promise.</h3>
+              </div>
+          </div>
+
+        </div>
     </div>
+  </div>
+</div>
+
 
 
 
