--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <body>
   <div class='title' >CARLIE OSTROM</div>
   <p>Hi, I’m Carlie and today I’m thinking about my puppy,
-    <span class="realWinston">Winston
-      <!-- <img class="realWinston1" src="styles/assets/realWinston.jpg" alt="img"> -->
-    </span>
-    . I study business at Wharton — I’ve got a knack for
+    <span class="realWinston">Winston.
+    </span> I study business at Wharton — I’ve got a knack for
     <a target="_blank" class='mainlink' href="https://merch-visualizer.herokuapp.com/">trading</a>
      commodities and thinking about the future of finance & tech. I
     <a target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a> and
