--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <a target="_blank" class='mainlink' href="https://medium.com/@rlietrom">writing</a>. Wondering what's next? Me too!</p>
     <input type="text" value="ostrom@wharton.upenn.edu" id="myInput">
 
-  <img class="dog img1" src="styles/assets/winston2.svg" alt="">
+  <img class="self" src="styles/assets/selfportraitblue.svg" alt="">
+  <!-- <img class="dog img1" src="styles/assets/winston2.svg" alt="">
   <img class="dog img2" src="styles/assets/winston2.svg" alt="">
-  <img class="dog img3" src="styles/assets/winston2.svg" alt="">
+  <img class="dog img3" src="styles/assets/winston2.svg" alt=""> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
