--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <p class="para">Hi, I’m Carlie and today I’m thinking about my puppy,
     <span class="realWinston">Winston.
-    </span> I study business at Wharton — I’ve got a knack for
+    </span> I study business among other things at Wharton and the University of Pennsylvania. I’ve got a knack for
     <a target="_blank" class='mainlink' href="https://merch-visualizer.herokuapp.com/">trading</a>
      commodities and thinking about the future of finance & tech. I started to
     <a target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a> and
