--- a/design.html
+++ b/design.html
@@ -8,8 +8,13 @@
   <body>
 <!-- https://codepen.io/lemmin/pen/xRyXMZ -->
 <div class="designbox">
-  <a class='title' href="index.html">CARLIE OSTROM</a>
-  <p>Design Work</p>
+  <div class="title">
+  <a href="index.html">
+    <img class="insideTitle" src="styles/assets/RLIETROMtitle.svg" alt="">
+    <img class="hoverTitle" src="styles/assets/RLIETROMtitle2.svg" alt="">
+  </a>
+</div>
+  <p class="para">Design Work</p>
   <div class="buttonrow">
     <h3 class="buttoncol UIUX">
       <button class="idk designbutton" type="button" name="button">UI/UX</button>
