--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 </head>
 <body>
   <div class="title" >
-    <p>
-      <span>C</span>
-      <span style='color: red'>A</span>
-      <span style='color: yellow'>R</span>
-      <span style='color: blue'>L</span>
-      <span style='color: green'>I</span>
-      <span style='color: red'>E</span>
-    </p>
+    <img class="insideTitle" src="styles/assets/RLIETROMtitle.svg" alt="">
+    <img class="hoverTitle" src="styles/assets/RLIETROMtitle2.svg" alt="">
   </div>
   <p class="para">Hi, I’m Carlie and today I’m thinking about my puppy,
     <span class="realWinston">Winston.
