committing this stuff that didn't work but i don't want 2 delete

--- a/design.html
+++ b/design.html
@@ -7,14 +7,14 @@
   </head>
   <body>
 <!-- https://codepen.io/lemmin/pen/xRyXMZ -->
-<div class="designbox">
-  <div class="title">
+<!-- <div class="designbox"> -->
+  <div class="title inline">
   <a href="index.html">
     <img class="insideTitle" src="styles/assets/RLIETROMtitle.svg" alt="">
     <img class="hoverTitle" src="styles/assets/RLIETROMtitle2.svg" alt="">
   </a>
-</div>
   <p class="para">Design Work</p>
+  </div>
   <div class="buttonrow">
     <h3 class="buttoncol UIUX">
       <button class="idk designbutton" type="button" name="button">UI/UX</button>
@@ -29,7 +29,6 @@
       <button class="idk4 designbutton" type="button" name="button">The Locust Experiment</button>
     </h3>
   </div>
-
 
   <div class="UIUXcontainer">
   <div id="container">
@@ -178,7 +177,7 @@
     </div>
   </div>
 
-</div>
+<!-- </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
