--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
     <img class="insideTitle" src="styles/assets/RLIETROMtitle.svg" alt="">
     <img class="hoverTitle" src="styles/assets/RLIETROMtitle2.svg" alt="">
   </div>
-  <p>Hi, I’m Carlie and today I’m thinking about my puppy,
-    <span class="realWinston">Winston.
+  <p>Hi, I’m Carlie and today I’m thinking about my puppy, Winston.
     </span> I study business among other things at Wharton and the University of Pennsylvania. I’ve got a knack for
     <a target="_blank" class='mainlink' href="https://merch-visualizer.herokuapp.com/">trading</a>
      commodities and thinking about the future of finance & tech. I started to
     <a target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a> and
-    <a class='mainlink' href="design.html">design</a> so I could feed my obsession of building things like
+    <a class='mainlink' href="design.html">design</a> so I could feed my obsession with building things like
     <a target="_blank" class='mainlink' href="http://thelocustexperiment.com">The Locust Experiment</a> and
     <a target="_blank" class='mainlink' href="http://thecollctve.com">The Collctve</a>. Currently, I'm doing product development work with
     <a target="_blank" class='mainlink' href="http://www.shleep.com/">Shleep</a> in Amsterdam.
     <a target="_blank" class='mainlink' href="cv.html">CV</a>,
     <a target="_blank" class='mainlink' href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
-    <a target="_blank" class='mainlink' href="https://medium.com/@rlietrom">writing</a>. Wondering what's next? Me too!</p>
+    <a target="_blank" class='mainlink' href="https://medium.com/@rlietrom">writing</a>,
+    <a target="_blank" class='mainlink' href="photo.html">photography</a>. Wondering what's next? Yeah, me too.</p>
     <input type="text" value="ostrom@wharton.upenn.edu" id="myInput">
 
-  <img class="self" src="styles/assets/selfportraitblue.svg" alt="">
-  <!-- <img class="dog img1" src="styles/assets/winston2.svg" alt="">
+    <!-- <img class="brick brick1" src="styles/assets/Brick.png" alt="">
+    <img class="brick brick2" src="styles/assets/Brick.png" alt="">
+    <img class="brick brick3" src="styles/assets/Brick.png" alt=""> -->
+  <!-- <img class="self" src="styles/assets/selfportraitblue.svg" alt="">
+  <img class="dog img1" src="styles/assets/winston2.svg" alt="">
   <img class="dog img2" src="styles/assets/winston2.svg" alt="">
   <img class="dog img3" src="styles/assets/winston2.svg" alt=""> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
