aug 6 refresh bio, cv

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 
   </div>
   <p>Hey! I’m Carlie. Today I’m reading
-    <a target="_blank" class='mainlink' href="https://www.amazon.co.uk/Post-Grad-Women-Their-League/dp/0062429493">Post Grad</a>.
+    <a target="_blank" class='mainlink' href="https://www.amazon.com/Spider-Network-Backstabbing-Greatest-Financial/dp/0062452983">The Spider Network</a>.
     </span> I study business among other things at Wharton and the University of Pennsylvania. I’ve got a knack for
     <a target="_blank" class='mainlink' href="https://merch-visualizer.herokuapp.com/">trading</a>
      commodities and the future of finance & tech. I started to
     <a target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a> and
     <a class='mainlink' href="design.html">design</a> so I could feed my love of building things like
     <a target="_blank" class='mainlink' href="http://thelocustexperiment.com">The Locust Experiment</a> and
-    <a target="_blank" class='mainlink' href="http://thecollctve.com">The Collctve</a>. Currently, I'm doing product development at
-    <a target="_blank" class='mainlink' href="http://www.shleep.com/">Shleep</a> in Amsterdam. Up next is BlackRock's investing software group, Aladdin.
+    <a target="_blank" class='mainlink' href="http://thecollctve.com">The Collctve</a>. Currently, I'm looking for full-time product work in a growth fintech company.
     <a target="_blank" class='mainlink' href="cv.html">CV</a>,
     <a target="_blank" class='mainlink' href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
