finished projects page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>CARLIE OSTROM</title>
-    <link rel="icon" href="styles/assets/RLIETROM.png">
+    <link rel="icon" href="styles/assets/circle-icon.png">
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
 </head>
 <body>
@@ -14,7 +14,7 @@
   <p>Hey! I’m Carlie. Today I’m reading
     <a target="_blank" class='mainlink' href="https://www.amazon.com/Spider-Network-Backstabbing-Greatest-Financial/dp/0062452983">The Spider Network</a>.
   </span> I study business among other things at Wharton and the University of Pennsylvania ('19). I love building digital
-    <a class='mainlink' href="projects.html">stuff</a> hence learning to
+    <a class='mainlink' href="projects.html">projects</a> hence learning to
     <a target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a>
      and design. I just finished working with
      <a target="_blank" class='mainlink' href="https://shleep.com">Shleep</a> and
