--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
-    <link rel="icon" href="styles/assets/RLIETROM.png">
+    <link rel="icon" href="styles/assets/circle-icon.png">
     <link rel="stylesheet" href="styles/styles.css" type="text/css">
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   </head>
   <body>
   <div class="row header">
@@ -27,62 +29,115 @@
   <br>
   <br>
 <div class="wrapper">
+
+  <!-- <h2 class="new-section">Scroll Animations</h2>
+<div class="scroll-animations">
+  <div class="animated">
+    <span>☎</span>
+    <h3>Number One</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
+  </div>
+  <div class="animated">
+    <span>♫</span>
+    <h3>Number Two</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
+  </div>
+  <div class="animated">
+    <span>☂</span>
+    <h3>Number Three</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
+  </div>
+</div> -->
+
   <!-- OG Merch -->
   <div class="project">
-    <p class="project-name">OG Merchants</p>
-    <img class="project-div" src="styles/assets/OG-Merchants-Description-Card.png" alt="">
-    <div class="gif-box">
-      <img src="styles/assets/Merch-Visualizer.gif" alt="">
-      <h3>View
-        <a class="h3link" href="https://merch-visualizer.herokuapp.com/">Merch Visualizer</a></h3>
+    <div class="project-section project-intro animated pulse">
+        <p class="project-name">OG Merchants</p>
+        <h3 class="h3center">finance, code, project management, design</h3>
+    </div>
+    <div class="project-section">
+      <img class="project-div" src="styles/assets/OG-Merchants-Description-Card.png" alt="">
+    </div>
+    <div class="project-section">
+      <div class="gif-box">
+        <img src="styles/assets/Merch-Visualizer.gif" alt="">
+        <h3>View
+          <a class="h3link" href="https://merch-visualizer.herokuapp.com/">Merch Visualizer</a></h3>
+      </div>
     </div>
   </div>
   <div class="project-separator"></div>
 
   <!-- TLE -->
-  <div class="project">
-    <p class="project-name">The Locust Experiment</p>
-    <img class="project-div" src="styles/assets/TLE-Description-Card.png" alt="">
-    <div class="gif-box">
-      <img src="styles/assets/TLE.gif" alt="">
-      <h3>View
-        <a class="h3link" href="http://thelocustexperiment.com/">The Locust Experiment</a></h3>
+  <div class="project scroll-animations">
+    <div class="project-section project-intro animated">
+      <p class="project-name">The Locust Experiment</p>
+      <h3 class="h3center">design, project management</h3>
     </div>
-    <img class="project-div" src="styles/assets/TLE-photos.png" alt="">
+    <div class="project-section">
+      <img class="project-div" src="styles/assets/TLE-Description-Card.png" alt="">
+    </div>
+    <div class="project-section">
+      <div class="gif-box">
+        <img src="styles/assets/TLE.gif" alt="">
+        <h3>View
+          <a class="h3link" href="http://thelocustexperiment.com/">The Locust Experiment</a></h3>
+      </div>
+    </div>
+    <div class="project-section">
+      <img class="project-div project-photo" src="styles/assets/TLE-photos.png" alt="">
+    </div>
   </div>
   <div class="project-separator"></div>
 
   <!-- Mini Docs -->
-  <div class="project">
-    <p class="project-name">Mini Docs</p>
-    <img class="project-div" src="styles/assets/minidocs-Description-Card.png" alt="">
-    <div class="gif-box">
-      <img src="styles/assets/minidocs.gif" alt="">
-      <h3>View
-        <a class="h3link" href="https://github.com/rlietrom/miniDocs">Mini Docs repo</a></h3>
+  <div class="project scroll-animations">
+    <div class="project-section project-intro animated">
+      <p class="project-name">Mini Docs</p>
+      <h3 class="h3center">code, design</h3>
+    </div>
+    <div class="project-section">
+      <img class="project-div" src="styles/assets/minidocs-Description-Card.png" alt="">
+    </div>
+    <div class="project-section">
+      <div class="gif-box">
+        <img src="styles/assets/minidocs.gif" alt="">
+        <h3>View
+          <a class="h3link" href="https://github.com/rlietrom/miniDocs">Mini Docs repo</a></h3>
+      </div>
     </div>
   </div>
   <div class="project-separator"></div>
 
   <!-- Snackchat -->
-  <div class="project">
-    <p class="project-name">Snackchat</p>
-    <img class="project-div" src="styles/assets/minidocs-Description-Card.png" alt="">
-    <div class="row">
-      <div class="col">
-        <div class="gif-box-mobile">
-            <img src="styles/assets/snackchatvid.gif" alt="">
-            <h3>View
-              <a class="h3link" href="https://github.com/rlietrom/miniDocs">Mini Docs repo</a>
-            </h3>
+
+
+  <div class="project scroll-animations">
+    <div class="project-section project-intro animated">
+      <p class="project-name">Snackchat</p>
+      <h3 class="h3center">code, design</h3>
+    </div>
+    <div class="project-section">
+      <img class="project-div" src="styles/assets/minidocs-Description-Card.png" alt="">
+    </div>
+    <div class="project-section">
+      <div class="row">
+        <div class="col">
+          <div class="gif-box-mobile">
+              <img src="styles/assets/snackchatvid.gif" alt="">
+              <h3>View
+                <a class="h3link" href="https://github.com/rlietrom/miniDocs">Mini Docs repo</a>
+              </h3>
+          </div>
         </div>
-      </div>
-      <div class="col">
-        <img src="styles/assets/snackchat-photos.png" alt="">
+        <div class="col">
+          <img src="styles/assets/snackchat-photos.png" alt="">
+        </div>
       </div>
     </div>
   </div>
-  </div>
+</div>
+
 
   <!-- <div class="footer">
     <div class="row">
