--- a/design.html
+++ b/design.html
@@ -17,6 +17,25 @@
     </a>
   </div>
 
+  <h2 class="new-section">Scroll Animations</h2>
+<div class="scroll-animations">
+  <div class="animated">
+    <span>☎</span>
+    <h3>Number One</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
+  </div>
+  <div class="animated">
+    <span>♫</span>
+    <h3>Number Two</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
+  </div>
+  <div class="animated">
+    <span>☂</span>
+    <h3>Number Three</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis lacinia est. Nulla malesuada massa orci, vitae placerat lorem pharetra a.</p>
+  </div>
+</div>
+
   <p class="para">Design Work</p>
   <div class="buttonrow">
     <h3 class="buttoncol UIUX">
