--- a/projects.html
+++ b/projects.html
@@ -136,6 +136,7 @@
       </div>
     </div>
   </div>
+  <h3>Shoutout to some great collaborators! Gavin Gates, Tiffany Yue, Bianca Jimenez, Ryan Clyde, Audrey Setiadarma, Evan Peterson, Reed Feldman, & Jilani Ghafur. </h3>
 </div>
 
 
