fixed animations on project page

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="col-3">
-      <h3>Projects I've built</h3>
+      <h3>Projects</h3>
     </div>
     <div class="col-3">
     </div>
@@ -51,14 +51,14 @@
 
   <!-- OG Merch -->
   <div class="project">
-    <div class="project-section project-intro animated pulse">
+    <div class="project-section project-intro animated fadeInDown">
         <p class="project-name">OG Merchants</p>
         <h3 class="h3center">finance, code, project management, design</h3>
     </div>
-    <div class="project-section">
+    <div class="project-section animated fadeInDown">
       <img class="project-div" src="styles/assets/og-description-card.png" alt="">
     </div>
-    <div class="project-section">
+    <div class="project-section animated fadeInDown">
       <div class="gif-box">
         <img src="styles/assets/Merch-Visualizer.gif" alt="">
         <h3>View
