--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   I graduated from Wharton in 2019 where I studied technically studied finance but actually built stuff incessantly, hence learning to
     <a id="githublink" target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a>
      and design.
-    I'm currently an analyst on the product team at <a target="_blank" class='mainlink' href="https://piano.io">Piano</a> working on reporting and data visualization.
+    I'm currently an analyst on the product team CHECK at <a target="_blank" class='mainlink' href="https://piano.io">Piano</a> working on reporting and data visualization.
     <br>
     <br>
     <a id="portfoliolink" class="mainlink" href="projects.html">Portfolio</a>,
-    <a id="cvlink" target="_blank" class="mainlink" href="styles/assets/CarlieOstromResumeJune2020.pdf">resume</a>,
+    <a id="cvlink" target="_blank" class="mainlink" href="styles/assets/CarlieOstromResumeJune2020.pdf">CV</a>,
     <a id="linkedinlink" target="_blank" class="mainlink" href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
     <a id="photoslink" class="mainlink" href="photos.html">photography</a>,
