removed CHECK from bio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   I graduated from Wharton in 2019 where I studied technically studied finance but actually built stuff incessantly, hence learning to
     <a id="githublink" target="_blank" class='mainlink' href="https://github.com/rlietrom">code</a>
      and design.
-    I'm currently an analyst on the product team CHECK at <a target="_blank" class='mainlink' href="https://piano.io">Piano</a> working on reporting and data visualization.
+    I'm currently an analyst on the product team at <a target="_blank" class='mainlink' href="https://piano.io">Piano</a> working on reporting and data visualization.
     <br>
     <br>
     <a id="portfoliolink" class="mainlink" href="projects.html">Portfolio</a>,
