--- a/oldwebsite/index.html
+++ b/oldwebsite/index.html
@@ -23,10 +23,10 @@
     <br>
     <br>
     <a id="portfoliolink" class="mainlink" href="projects.html">Portfolio</a>,
-    <a id="cvlink" target="_blank" class="mainlink" href="styles/assets/CarlieOstromResumeDec2020.pdf">CV</a>,
+    <a id="cvlink" target="_blank" class="mainlink" href="oldwebsite/styles/assets/CarlieOstromResumeDec2020.pdf">CV</a>,
     <a id="linkedinlink" target="_blank" class="mainlink" href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
-    <a id="photoslink" class="mainlink" href="photos.html">photography</a>,
+    <a id="photoslink" class="mainlink" href="oldwebsite/photos.html">photography</a>,
     <a id="mediumlink" target="_blank" class="mainlink" href="https://medium.com/@rlietrom">writing</a>. Cheers.</p>
     <input type="text" value="ostrom@wharton.upenn.edu" id="myInput">
 
