changed wording, sept 2021 resume

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      and design.)
     I'm currently on the product team at
     <a id="pianolink" target="_blank" class='mainlink' href="https://piano.io">Piano</a>
-     , working on reporting and data visualization.
+     , working on reporting and analytics.
     <br>
     <br>
     <a id="cvlink" target="_blank" class="mainlink" href="cv.html">CV</a>,
