first push on new Mac. renamed /photos.html to /soul.html. testing youtube embed.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a id="cvlink" target="_blank" class="mainlink" href="cv.html">CV</a>,
     <a id="linkedinlink" target="_blank" class="mainlink" href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
-    <a id="photoslink" class="mainlink" href="oldwebsite/photos.html">photos</a>,
+    <a id="photoslink" class="mainlink" href="soul.html">soul</a>,
    Cheers.</p>
     <input type="text" value="rlietrom@gmail.com" id="myInput">
 
