--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a id="linkedinlink" target="_blank" class="mainlink" href="https://www.linkedin.com/in/carlie-ostrom-06956b3b/">LinkedIn</a>,
     <button class="emailbutton" onclick="myFunction()">email</button>,
     <a id="photoslink" class="mainlink" href="soul.html">soul</a>,
+    <a id="milestoneslink" class="mainlink" href="milestones.html">milestones</a>,
    Cheers.</p>
     <input type="text" value="rlietrom@gmail.com" id="myInput">
 
