--- a/milestones.html
+++ b/milestones.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="col-3">
-      <h3>As it turns out, souls don't change!</h3>
+      <h3>Milestones</h3>
     </div>
     <div class="col-3">
     </div>
@@ -28,21 +28,19 @@
   <br>
   <br>
   <br>
-  <div class="soul">
-    <iframe class="soul-video" src="https://www.youtube.com/embed/HqYApr27f_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="col-milestone-thick">
+    <h3>2000</h3>
+    <p>Milestones text goes here</p>
   </div>
-  <img class="soul" src="styles/assets/photos/000014.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/000015.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/000016.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/66870006.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/92710003.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/braids.jpg.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/quickdirtylarge 17.jpg" alt="">
-  <img class="soul" src="styles/assets/photos/quickdirtylarge 21.jpg" alt="">
-  <img class="soul" src="styles/assets/photos/quickdirtylarge 29.jpg" alt="">
-  <img class="soul" src="styles/assets/photos/R1-00856-0010.JPG" alt="">
-  <img class="soul" src="styles/assets/photos/R1-00857-0004.JPG" alt="">
-
+  <div class="col-milestone-thin">
+  </div>
+  <div class="col-milestone-thick">
+    <h3>2001</h3>
+    <p>Milestones text goes here</p>
+  </div>
+  <iframe width="420" height="315"
+  src="https://www.youtube.com/embed/HqYApr27f_8">
+  </iframe>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
