removing height auto from class=soul

--- a/soul.html
+++ b/soul.html
@@ -28,7 +28,7 @@
   <br>
   <br>
   <br>
-  <div class="soul">
+  <div class="soul-video">
     <iframe class="soul-video" src="https://www.youtube.com/embed/HqYApr27f_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <img class="soul" src="styles/assets/photos/000014.JPG" alt="">
